[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/LVL1.gd" type="Script" id=1]
[ext_resource path="res://Sceans/ParallaxBackgroundTest.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sceans/CanvasLayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sceans/FPlayer.tscn" type="PackedScene" id=4]

[node name="LVL1" type="Node"]

script = ExtResource( 1 )

[node name="ParallaxBackground" parent="." index="0" instance=ExtResource( 2 )]

[node name="CanvasLayer" parent="." index="1" instance=ExtResource( 3 )]

[node name="FPlayer" parent="." index="2" instance=ExtResource( 4 )]

[node name="Enemy1Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="Enemy2Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.7
one_shot = false
autostart = true

[node name="Enemy3Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="PowerSpawnTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="Enemy2StartTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = true

[node name="Enemy3StartTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 15.0
one_shot = true
autostart = true

[node name="BossTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="timeout" from="Enemy1Timer" to="." method="_on_Enemy1Timer_timeout"]

[connection signal="timeout" from="Enemy2Timer" to="." method="_on_Enemy2Timer_timeout"]

[connection signal="timeout" from="Enemy3Timer" to="." method="_on_Enemy3Timer_timeout"]

[connection signal="timeout" from="PowerSpawnTimer" to="." method="_on_PowerSpawnTimer_timeout"]

[connection signal="timeout" from="Enemy2StartTimer" to="." method="_on_Enemy2StartTimer_timeout"]

[connection signal="timeout" from="Enemy3StartTimer" to="." method="_on_Enemy3StartTimer_timeout"]

[connection signal="timeout" from="BossTimer" to="." method="_on_BossTimer_timeout"]


